<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.splash.SplashFragment1">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="143dp"
        android:layout_gravity="center"
        android:layout_marginStart="@dimen/sixteen_dp"
        android:layout_marginEnd="@dimen/sixteen_dp"
        android:contentDescription="@string/tumbuhin_logo"
        android:scaleType="centerCrop"
        android:src="@drawable/logo_main"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="213dp"/>

    <Button
        android:id="@+id/btn_start"
        android:layout_width="219dp"
        android:layout_height="40dp"
        android:layout_gravity="center"
        android:layout_marginBottom="24dp"
        android:background="@drawable/rounded_btn"
        android:fontFamily="@font/poppins"
        android:text="@string/start"
        android:textColor="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/textView3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="40dp"
        android:fontFamily="@font/poppins"
        android:gravity="center"
        android:text="@string/project_by"
        android:textColor="@color/font_color"
        android:textSize="@dimen/ten_sp"
        android:maxLines="2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>