<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.main.HomeFragment">

    <ImageView
        android:layout_width="68dp"
        android:layout_height="31dp"
        android:layout_marginTop="18dp"
        android:layout_marginEnd="12dp"
        android:scaleType="centerCrop"
        android:src="@drawable/logo_main"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="363dp"
        android:layout_height="216dp"
        android:layout_gravity="center"
        android:layout_marginTop="160dp"
        android:scaleType="centerCrop"
        android:src="@drawable/vector_home"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="14dp"
        android:fontFamily="@font/poppins_bold"
        android:text="@string/start_detect"
        android:textColor="@color/black"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins"
        android:gravity="center"
        android:text="@string/unggah_teks"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <Button
        android:id="@+id/btn_upload"
        android:layout_width="133dp"
        android:layout_height="52dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/rounded_btn2"
        android:fontFamily="@font/roboto_medium"
        android:text="@string/upload_gambar"
        android:textColor="@color/white"
        android:textSize="@dimen/twelve_sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <Button
        android:id="@+id/btn_capture"
        android:layout_width="133dp"
        android:layout_height="52dp"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="50dp"
        android:layout_toEndOf="@+id/btn_upload"
        android:background="@drawable/rounded_btn2"
        android:fontFamily="@font/roboto_medium"
        android:text="@string/ambil_gambar"
        android:textColor="@color/white"
        android:textSize="@dimen/twelve_sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

</androidx.constraintlayout.widget.ConstraintLayout>