<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".ui.main.SearchFragment">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="68dp"
        android:layout_height="31dp"
        android:layout_marginTop="18dp"
        android:layout_marginEnd="12dp"
        android:scaleType="centerCrop"
        android:src="@drawable/logo_main"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/small_logo" />

    <androidx.appcompat.widget.SearchView
        android:id="@+id/search_view"
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="38dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/rounded_search"
        android:elevation="4dp"
        app:defaultQueryHint="Cari Jenis Penyakit atau Tumbuhan Herbal..."
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2"
        app:queryHint="Cari Jenis Penyakit atau Tumbuhan Herbal..." />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="match_parent"
        android:layout_height="310dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="61dp"
        android:layout_marginEnd="16dp"
        android:src="@drawable/vector_search_error"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/search_view"
        android:contentDescription="@string/error_image" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="57dp"
        android:layout_marginTop="2dp"
        android:fontFamily="@font/poppins"
        android:gravity="center"
        android:text="@string/search_error"
        android:textColor="@color/textstarter_color"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView3" />


</androidx.constraintlayout.widget.ConstraintLayout>